# GeoLibre

./: .dockerignore  .gitattributes  .gitignore  .oxfmtrc.json  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  eslint.config.mjs  mkdocs.yml  netlify.toml  package-lock.json  package.json  playwright.config.ts  requirements-docs.txt  ruff.toml  tsconfig.base.json
.github/: FUNDING.yml  (+1 more)
apps/geolibre-desktop/: Cargo.toml  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/geolibre-desktop/assets/: maplibre_gl_app.html
apps/geolibre-desktop/jupyterlite/: jupyter-lite.json  jupyter_lite_config.json  requirements.txt
apps/geolibre-desktop/jupyterlite/files/: Welcome.ipynb
apps/geolibre-desktop/public/: plugin-registry.json  whitebox-catalog-snapshot.json
apps/geolibre-desktop/public/marketplace/sample/: index.js  plugin.json  style.css
apps/geolibre-desktop/public/plugins/: .gitignore  README.md
apps/geolibre-desktop/public/pyodide/: pyodide-worker.js
apps/geolibre-desktop/src/: App.tsx  index.css  main.rs  main.tsx  vite-env.d.ts
apps/geolibre-desktop/src-tauri/: Cargo.toml  Info.ios.plist  tauri.android.conf.json  tauri.conf.json
apps/geolibre-desktop/src-tauri/.cargo/: config.toml
apps/geolibre-desktop/src-tauri/capabilities/: default.json
apps/geolibre-desktop/src-tauri/icons/: icon.icns
apps/geolibre-desktop/src-tauri/src/: earth_engine_oauth.rs  lib.rs  main.rs  native_duckdb.rs
apps/geolibre-desktop/src/components/: CollapsibleSection.tsx
apps/geolibre-desktop/src/components/command/: CommandPalette.tsx  KeyboardShortcutsDialog.tsx
apps/geolibre-desktop/src/components/common/: error-boundaries.tsx
apps/geolibre-desktop/src/components/expressions/: ExpressionBuilderDialog.tsx
apps/geolibre-desktop/src/components/layout/: AboutDialog.tsx  AddDataDialog.tsx  AddNetcdfDialog.tsx  AiSectionContent.tsx  BasemapExtractDialog.tsx  BasemapExtractPanel.tsx  BoundsRestrictionIndicator.tsx  CollaborateDialog.tsx  CollaborationParticipantRow.tsx  CollaborationStatusBadge.tsx  DesktopShell.tsx  DiagnosticsDialog.tsx  FieldCollectionDialog.tsx  FileNamePromptDialog.tsx  GeoreferencerDialog.tsx  GpsTrackingDialog.tsx  KmlImportDialog.tsx  KnowledgeCardConsentDialog.tsx  KnowledgeCardPanel.tsx  LoadFeaturesIntoEditorDialog.tsx  ManagePluginsDialog.tsx  MapContextMenu.tsx  MapGrid.tsx  MapModeBanner.tsx  NewProjectDialog.tsx  NoServiceWorkerBanner.tsx  OfflineManagerDialog.tsx  OfflineRegionDialog.tsx  OnboardingDialog.tsx  PixelTimeSeriesControl.tsx  PluginMarketplace.tsx  PrintLayoutDialog.tsx  ProjectGalleryDialog.tsx  ProjectPluginTrustDialog.tsx  RasterSubsetPanel.tsx  RecordTourDialog.tsx  RecordVideoDialog.tsx  RegionSelectOverlay.tsx  ReleaseNotes.tsx  RemoteCursorsOverlay.tsx  (+7 more)
apps/geolibre-desktop/src/components/legend/: LegendSwatch.tsx  MapLegendPanel.tsx
apps/geolibre-desktop/src/hooks/: embedHost.ts  useAutoLegend.ts  useBeforeUnloadGuard.ts  useBrowserTree.ts  useCollaboration.ts  useCommandBridge.ts  useConsentGatedActions.ts  useDesktopSettings.ts  useEmbedBridge.ts  useFileNamePrompt.ts  useGlobalShortcuts.ts  useIsMobileViewport.ts  useLanguage.ts  useLayerChartData.ts  useLayoutOptions.ts  useMapPanelControl.ts  useNotebookBridge.ts  useNotebookThemeSync.ts  useOsmPbfLoader.ts  usePluginUiSurfaces.ts  usePlugins.ts  useProjectFileActions.ts  useProjectUrlLoader.ts  useRasterIdentify.ts  useRecentProjectsPersistence.ts  useRegisterBrowserPanel.ts  useRightPanels.ts  useRuntimeEnvironmentVariables.ts  useStartupUpdateCheck.ts  useStyleLibraryPersistence.ts  useThemeMode.ts  useThemeScheme.ts  useToolbarPanels.ts  useUiProfileBootstrap.ts  useUndoRedoShortcuts.ts  useVectorTileGeometryBackfill.ts  useViewportHistory.ts
apps/geolibre-desktop/src/i18n/: i18next.d.ts  index.ts  languages.ts
apps/geolibre-desktop/src/lib/: admin-profile.ts  attribute-charts.ts  attribute-columns.ts  attribute-expression.ts  attribute-selection.ts  attribute-stats.ts  auto-legend.ts  basemap-presets.ts  basemap-style.ts  browser-favorites.ts  browser-folders.ts  browser-tree.ts  build-project-snapshot.ts  cereus-loader.cdn.ts  cereus-loader.ts  chart-export.ts  clamp.ts  collab-client.ts  collab-protocol.ts  collada-to-glb.ts  column-explorer.ts  commands.ts  comtiles.ts  coordinates.ts  crs-utils.ts  csv.ts  deck-viz-input.ts  delimited-text.ts  detection-models.ts  diagnostics.ts  dms.ts  duckdb-geojson-fid.ts  duckdb-geometry.ts  duckdb-processing.ts  duckdb-vector-guard.ts  duckdb-vector-loader.ts  duckdb-wasm-bundles.tauri.ts  duckdb-wasm-bundles.ts  expression-inputs.ts  external-map-links.ts  (+119 more)
apps/geolibre-desktop/vite-plugins/: bundled-plugins.ts  copy-arcgis-assets.ts  copy-cesium-assets.ts  copy-rtl-text.ts  copy-vector-ops.ts
backend/geolibre_server/: README.md  jupyter_server_config.py  notebook_client.py  pyproject.toml
backend/geolibre_server/geolibre_server/: __init__.py  sedona_ops.py  vector_ops.py
backend/geolibre_server/geolibre_server/app/: conversion.py  main.py  ml.py  postgis.py  raster.py  runtime.py  sql.py  vector.py  whitebox.py
backend/geolibre_server/tests/: test_conversion.py  test_conversion_gdb.py  test_ml.py  test_postgis.py  test_raster.py  test_security.py  test_sql.py  test_vector.py  test_vector_golden.py  test_vector_ops.py  test_whitebox_arguments.py  test_whitebox_endpoints.py
crates/geolibre-io/: Cargo.toml
crates/geolibre-io/src/: error.rs  geojson_loader.rs  lib.rs  placeholders.rs
crates/geolibre-ui/: Cargo.toml
crates/geolibre-ui/src/: lib.rs
python/: .gitignore  README.md  hatch_build.py  pyproject.toml
python/examples/: getting-started.ipynb
python/jupyter-config/jupyter_server_config.d/: geolibre.json
python/src/geolibre/: __init__.py  _extension.py  _frontend.js  _server.py  basemaps.py  color_ramp.py  geolibre.py  legends.py  project.py
python/tests/: test_color_ramp.py  test_extension.py  test_extension_routes.py  test_map.py  test_project.py  test_scripting.py  test_server.py
(+560 files in other folders)
