[package]
name = "geolibre-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
geolibre-core.workspace = true
geolibre-io.workspace = true
gtk.workspace = true
serde_json.workspace = true
winit.workspace = true
wry.workspace = true
x11-dl.workspace = true
