[package]
name = "geolibre-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
geolibre-core.workspace = true
geolibre-io.workspace = true
serde_json.workspace = true
winit.workspace = true
wry.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
gtk.workspace = true
x11-dl.workspace = true
