[package]
name = "geolibre-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
duckdb = ["dep:duckdb"]
gdal = ["dep:gdal"]

[dependencies]
duckdb = { version = "1.10503.1", optional = true }
gdal = { version = "0.18.0", optional = true }
geojson.workspace = true
geolibre-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
